--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -1,5 +1,8 @@
 name: Deploy to GitHub Pages & Cloudflare Pages
 
+permissions:
+  contents: write
+
 on:
   push:
     branches:
@@ -20,7 +23,6 @@ jobs:
         with:
           node-version: '20'
 
-      # Cache npm downloads (speeds up npm install)
       - name: Cache node modules
         uses: actions/cache@v3
         with:
@@ -34,6 +36,24 @@ jobs:
           cd site
           npm install
 
+      - name: Build project
+        run: |
+          cd site
+          npm run build
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./site/dist
+
+      - name: Deploy to Cloudflare Pages
+        uses: cloudflare/pages-action@v1
+        with:
+          apiToken: ${{ secrets.CF_API_TOKEN }}
+          accountId: ${{ secrets.CF_ACCOUNT_ID }}
+          projectName: loveide
+          directory: site/dist
       - name: Build project
         run: |
           cd site
